--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -18,11 +18,11 @@ body {
     line-height: 1.3;
     font-weight: 400;
     font-size: 14px;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif  !important;
     overflow-x: hidden !important;
         
     p {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif  !important;
     font-size: 15px;
     font-weight: 400;
     
