--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -191,6 +191,10 @@ label:hover {
 #portfolio {
 	padding: 25px 0;
 }
+#portfolio .section-title h2 {
+    color: $bg-solid;
+}
+
 .categories {
 	padding-bottom: 30px;
 	text-align: center;
